# GoGoGo/cmd/server/handler/appointments.go
@@ -46,6 +46,16 @@ func NewAppointmentsHandler(creator AppointmentCreator, getter AppointmentGetter
 	}
 }
 
+// PostAppointment
+// @Summary      Crea un nuevo turno
+// @Description  Crea un nuevo turno y lo almacena en la base de datos.
+// @Tags         appointments
+// @Produce      json
+// @Param 		 body body appointments.Appointment true "Appointment"
+// @Success      201 {object} appointments.Appointment
+// @Failure		 400 {object} error
+// @Failure		 500 {object} error: internal error
+// @Router       /appointments [post]
 func (ph *AppointmentsHandler) PostAppointment(ctx *gin.Context) {
 
 	appointmentRequest := appointments.Appointment{}
@@ -67,6 +77,16 @@ func (ph *AppointmentsHandler) PostAppointment(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, appointment)
 }
 
+// GetAppointmentByID
+// @Summary      Obtener un turno por su ID
+// @Description  Obtener un turno por su ID existente en la base de datos.
+// @Tags         appointments
+// @Produce      json
+// @Param        id path string true "ID"
+// @Success      200 {object} appointments.Appointment
+// @Failure		 400 {object} error: invalid id
+// @Failure	     404 {object} error: appointment not found
+// @Router       /appointments/{id} [get]
 func (ph *AppointmentsHandler) GetAppointmentByID(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -82,6 +102,17 @@ func (ph *AppointmentsHandler) GetAppointmentByID(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// PutAppointment
+// @Summary      Modificar un turno
+// @Description  Modifica la información de un turno existente en la base de datos. Este endpoint permite actualizar los detalles de un odontólogo identificado por su ID.
+// @Tags         appointments
+// @Produce      json
+// @Param        id path string true "ID"
+// @Param 		 body body appointments.Appointment true "Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Failure		 400 {object} error: invalid id
+// @Failure		 500 {object} error: internal error
+// @Router       /appointments/{id} [put]
 func (ph *AppointmentsHandler) PutAppointment(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -106,6 +137,18 @@ func (ph *AppointmentsHandler) PutAppointment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointment)
 }
 
+// PatchAppointment
+// @Summary      Modificar turno
+// @Description  Modifica la información de un turno existente en la base de datos por alguno de sus campos. Los campos no proporcionados en la solicitud permanecerán sin cambios en el odontólogo.
+// @Tags         appointments
+// @Produce      json
+// @Param        id path string true "ID"
+// @Param 		 body body appointments.Appointment true "Appointment"
+// @Success      200 {object} appointments.Appointment
+// @Failure		 400 {object} error: invalid id
+// @Failure		 404 {object} error: dentist not found
+// @Failure		 500 {object} error: internal error
+// @Router       /appointments/{id} [patch]
 func (ph *AppointmentsHandler) PatchAppointment(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -149,6 +192,17 @@ func (ph *AppointmentsHandler) PatchAppointment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, appointmentUpdate)
 }
 
+// DeleteAppointment
+// @Summary      Eliminar a un turno por su ID.
+// @Description  Elimina un odontólogo existente en la base de datos por su ID.
+// @Tags         appointments
+// @Produce      json
+// @Param        id path string true "ID"
+// @Success      200 Appointment deleted
+// @Failure		 400 {object} error: invalid id
+// @Failure		 404 {object} error: appointment not found
+// @Failure		 400 {object} error: delete failed
+// @Router       /appointments/{id} [delete]
 func (ph *AppointmentsHandler) DeleteAppointment(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	id, err := strconv.Atoi(idParam)
@@ -172,14 +226,17 @@ func (ph *AppointmentsHandler) DeleteAppointment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"message": "appointment deleted"})
 }
 
+// GetAppointmentByPatient
+// @Summary      Obtener turnos por DNI de paciente
+// @Description  Obtener turnos por DNI de paciente en la base de datos.
+// @Tags         appointments
+// @Produce      json
+// @Param        credential_id path string true "Credential_ID"
+// @Success      200 {object} appointments.Appointment
+// @Failure	     404 {object} error: dentist not found
+// @Router       /appointments/{credential_id} [get]
 func (ph *AppointmentsHandler) GetAppointmentByPatient(ctx *gin.Context) {
 	credentialId := ctx.Param("credential_id")
-	//idParam := ctx.Param("id")
-	//credential_id, err := strconv.Atoi(idParam)
-	// if err != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
-	// 	return
-	// }
 	appointment, err := ph.appointmentsGetterByPatient.GetByCredentialID(credentialId)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": "appointment not found"})
